# snake-openenv

./: Dockerfile  README.md  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml
server/: app.py
