[project]
name = "snake-openenv"
version = "1.0.0"
description = "Snake Game OpenEnv RL Environment"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
