[project]
name = "snake-openenv"
version = "1.0.0"
description = "Snake Game OpenEnv RL Environment"
requires-python = ">=3.9"
dependencies = ["gymnasium>=0.29.0", "numpy>=1.24.0", "openenv>=0.1.13"]

[project.scripts]
server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
